--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.4",
+        "paypal/rest-api-sdk-php": "*",
         "pbmedia/laravel-ffmpeg": "^7.4",
-        "srmklive/paypal": "^3.0",
-        "paypal/rest-api-sdk-php": "*"
+        "srmklive/paypal": "~1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
