--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.4",
+        "league/omnipay": "^3",
+        "omnipay/paypal": "^3.0",
         "paypal/rest-api-sdk-php": "*",
         "pbmedia/laravel-ffmpeg": "^7.4",
         "srmklive/paypal": "~1.0"
