--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,9 @@
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.4",
-        "league/omnipay": "^3.1",
+        "league/omnipay": "^3",
         "omnipay/paypal": "^3.0",
-        "omnipay/stripe": "^3.1",
-        "paypal/rest-api-sdk-php": "*",
-        "pbmedia/laravel-ffmpeg": "^7.4",
-        "srmklive/paypal": "~1.0"
+        "pbmedia/laravel-ffmpeg": "^7.4"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
