--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ npm-debug.log
 yarn-error.log
 /public/upload
 .idea/*
+/storage/framework/cache/*
+/storage/framework/sessions/*
+/storage/framework/views/*
