--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.4",
         "league/omnipay": "^3",
+        "omnipay/payflow": "^3.0",
         "omnipay/paypal": "^3.0",
         "pbmedia/laravel-ffmpeg": "^7.4"
     },
