--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
         "league/omnipay": "^3",
         "omnipay/payflow": "^3.0",
         "omnipay/paypal": "^3.0",
-        "pbmedia/laravel-ffmpeg": "^7.4",
-        "zanysoft/laravel-zip": "master"
+        "pbmedia/laravel-ffmpeg": "^7.4"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
